objects/SO_KMI__c.object
<CustomObject>
    <label>KMI</label>
    <nameField>
        <displayFormat>KMI-{00000000}</displayFormat>
        <label>KMI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KMIs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Vehicle_Manufacturer__c.Name</field>
                <operation>equals</operation>
                <value>Jaguar,Land Rover,Daimler</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Manufacturer__c</referenceTo>
        <relationshipLabel>KMIs</relationshipLabel>
        <relationshipName>KMIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Brand__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Model__c</referenceTo>
        <relationshipLabel>KMIs</relationshipLabel>
        <relationshipName>KMIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>KMIs</relationshipLabel>
        <relationshipName>KMIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>KMIs</relationshipLabel>
        <relationshipName>KMIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programme</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Programme__c.SO_Product_Offering__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Product_Offering__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Programme__c</referenceTo>
        <relationshipLabel>KMIs</relationshipLabel>
        <relationshipName>KMIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hand_of_drive__c</fullName>
        <description>User able to select value from the list</description>
        <inlineHelpText>Please select one option</inlineHelpText>
        <label>Hand of drive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LHD</fullName>
                </value>
                <value>
                    <fullName>RHD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Body_Style__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Body Style</label>
        <referenceTo>SO_Vehicle_Body_Style__c</referenceTo>
        <relationshipLabel>KMIs</relationshipLabel>
        <relationshipName>KMIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Series_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Series Name</label>
        <referenceTo>SO_Vehicle_Series__c</referenceTo>
        <relationshipLabel>KMIs</relationshipLabel>
        <relationshipName>KMIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Source_Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Enquiry</label>
        <referenceTo>SO_Enquiry__c</referenceTo>
        <relationshipLabel>KMIs</relationshipLabel>
        <relationshipName>KMIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Product_Offering__c</fullName>
        <label>Product Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Product_Offering</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>SO_Classic_KMI</fullName>
        <active>true</active>
        <label>Classic KMI</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_Validate_Programme_Brand_Model</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(SO_Programme__c ) &amp;&amp; NOT(ISBLANK( SO_Programme__c )) &amp;&amp; (SO_Programme__r.SO_Brand__c &lt;&gt; SO_Brand__c || SO_Programme__r.SO_Model__c &lt;&gt; SO_Model__c)</errorConditionFormula>
        <errorDisplayField>SO_Programme__c</errorDisplayField>
        <errorMessage>KMI&apos;s Brand/Model should match Programme&apos;s Brand/Model</errorMessage>
    </validationRules>
</CustomObject>